[package]
name = "auth"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
tokio = "0.2.20"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.8"
jsonwebtoken = "7.1.0"
serde = {version = "1.0.106", feature=["derive"]}
serde_json = "1.0.53"
actix = "0.9.0"
futures = "0.3.5"
lazy_static = "1.4.0"
